Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,12 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    full_name = restaurant.dict[n]"
+    "    full_name = restaurant.dict[name]\n",
+    "    return full_name"
    ]
   },
   {
