Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    full_name = restaurant.dict[name]\n",
+    "    full_name = restaurant[name]\n",
     "    return full_name"
    ]
   },
