Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,12 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    full_name = restaurant[name]\n",
+    "    full_name = restaurant[name.value]\n",
     "    return full_name"
    ]
   },
