--- a/index.ipynb
+++ b/index.ipynb
@@ -201,8 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    r\n",
-    "    return full_name"
+    "    print res"
    ]
   },
   {
