--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,8 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    for restauranr"
+    "    for restaurant in restaurant\n",
+    "    "
    ]
   },
   {
