--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    "source": [
     "def restaurant_name(restaurant):\n",
     "    for restaurant in restaurant\n",
-    "    rest"
+    "    return restaurant['']"
    ]
   },
   {
