Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,6 +135,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fork_fig.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
