--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return len(restaurant['price'])<alter"
+    "    return len(restaurant['price'])<lenalternative"
    ]
   },
   {
