Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -421,12 +421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-31-2c60133ef3ac>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-2c60133ef3ac>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return len(restaurant['price'])<len(alternative['price)\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return len(restaurant['price'])<len(alternative['price']"
+    "    return len(restaurant['price'])<len(alternative['price'"
    ]
   },
   {
