--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    return restaurant['rating]"
+    "    return restaurant['rating']"
    ]
   },
   {
